--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -24,20 +24,26 @@ input, textarea, .input textarea, input.fakeinput{
 }
 
 
-#container                  {}
-#primary                    {width: 500px; background-color: #E9EDFB; padding: 20px; -webkit-border-radius: 6px;}
-textarea                    {height: 100px;}
-.column                     {float: left; background-color: #DBE3F2; padding: 5px; margin-bottom: 7px; -webkit-border-radius: 6px; position: relative;}
-.column input               {width: 200px;}
-label                       {display: inline-block; width: 100px; float: left; text-align: right; padding: 12px 30px 0 0; font-weight: bold; clear: left;}
-.full-column                {background-color: #DBE3F2; padding: 5px; margin-bottom: 5px; -webkit-border-radius: 6px; clear: both;}
-.full-column input          {width: 435px;}
-.column-select              {padding: 4px;}
-.column-file                {background-color: #DBE3F2; padding: 5px; margin-bottom: 5px; -webkit-border-radius: 6px;}
-.align-left                 {float: left;}
-.align-right                {float: right;}
-.section                    {margin-bottom: 5px; overflow: hidden;}
-.section-label              {clear: both; padding: 0 0 3px 5px;}
-#submit                     {background-color: #A6B6CD; border: none; text-transform: uppercase; color: #FFFFFF; font-size: 12px; font-weight: bold; padding: 8px 11px;  -webkit-border-radius: 3px; margin-left: 135px;}
-.error                      {background-color: #FCC;}
-.errorlist                  {font-size: 12px; margin-top: 4px; font-weight: bold;}
+#container                      {}
+#primary                        {width: 500px; background-color: #E9EDFB; padding: 20px; -webkit-border-radius: 6px;}
+textarea                        {height: 100px;}
+.column                         {float: left; background-color: #DBE3F2; padding: 5px; margin-bottom: 7px; -webkit-border-radius: 6px; position: relative;}
+.column input[type='text']      {width: 200px;}
+.column input[type='radio']     {width: 20px;}
+.column ul                      {overflow: hidden;}
+.column li                      {width: 70px; float: left; padding: 3px 0;}
+.column li label                {width: 50px; padding: 0;}
+.column li:first-child          {padding-right: 30px;}
+label                           {display: inline-block; width: 100px; float: left; text-align: right; padding: 9px 30px 0 0; font-weight: bold; clear: left;}
+.full-column                    {background-color: #DBE3F2; padding: 5px; margin-bottom: 5px; -webkit-border-radius: 6px; clear: both;}
+.full-column input              {width: 435px;}
+.column-select                  {padding: 4px;}
+.column-file                    {background-color: #DBE3F2; padding: 5px; margin-bottom: 5px; -webkit-border-radius: 6px;}
+.align-left                     {float: left;}
+.align-right                    {float: right;}
+.section                        {margin-bottom: 5px; overflow: hidden;}
+.section-label                  {clear: both; padding: 0 0 3px 5px;}
+#submit                         {background-color: #A6B6CD; border: none; text-transform: uppercase; color: #FFFFFF; font-size: 12px; font-weight: bold; padding: 8px 11px;  -webkit-border-radius: 3px; margin-left: 135px;}
+.error                          {background-color: #FCC;}
+.errorlist                      {font-size: 12px; margin-top: 4px; font-weight: bold;}
+.errorlist li                   {width: 100%;}
