--- a/apps/guests/templates/guest_register.html
+++ b/apps/guests/templates/guest_register.html
@@ -2,12 +2,13 @@
 
 {% load form_helpers %}
 
-{# {% block extra_js %}<script src="{{ MEDIA_URL }}js/jquery.forms.js" type="text/javascript" charset="utf-8"></script>{% endblock %} #}
+{% block page_class %}{% endblock %}
 
 {% block primary %}
 
 {% block content %}
-    <form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">
+    <h1>RSVP</h1>
+    <form id="rsvp-form" action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="section">
             <label for="{{ form.first_name.auto_id }}" class="input {{ classes }}">{{ form.first_name.label }}:</label>
