--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,21 +1,20 @@
 {% extends 'base.html' %}
 
+{% load blog_tags %}
+
 {% block primary %}
     <img class="photo size1" src="{{MEDIA_URL}}img/tim-mai-linh-67.jpg" />
-    <img class="photo size2 inline" src="{{MEDIA_URL}}img/tim-mai-linh-67.jpg" />
-    <img class="photo size3 inline" src="{{MEDIA_URL}}img/tim-mai-linh-67.jpg" />
-    <img class="photo size3 inline" src="{{MEDIA_URL}}img/tim-mai-linh-67.jpg" />
-    <img class="photo size3 inline" src="{{MEDIA_URL}}img/tim-mai-linh-67.jpg" />
-    <img class="photo size3 inline" src="{{MEDIA_URL}}img/tim-mai-linh-67.jpg" />
+    {% get_latest_entries 1 as articles %}
+    {% for article in articles %}
+        <div id="home-news">
+            <h2><a href="{% url home_index %}">Latest News</a></h2>
+            <h3><a href="#">{{ article.title }}</a></h3>
+            <span class="meta">{{ article.created|date:"jS F Y" }}</span>
+            {{ article.lead_in }}
+        </div>
+    {% endfor %}
 {% endblock %}
 
 {% block secondary %}
-    <div id="secondary">
-        <div id="home-news">
-            <h2><a href="#">Latest News</a></h2>
-            <h3><a href="#">This is a News Headline</a></h3>
-            <span class="meta">25th January 2010</span>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque. Aenean commodo ligula eget dolor <a href="#">more &raquo;</a></p>
-        </div>
-    </div>
+    <img class="photo size2 inline" src="{{MEDIA_URL}}img/tim-mai-linh-67.jpg" />
 {% endblock %}
